--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anshuman-dance-academy",
+  "name": "mydancewebsite",
   "version": "1.0.0",
   "description": "This is a website for skilled dance academy",
   "main": "app.js",
@@ -9,7 +9,23 @@
   "author": "Anshuman Singh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.3",
+    "mongoose": "^5.13.3",
     "pug": "^3.0.2"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anshuman108-tech/dance_website.git"
+  },
+  "keywords": [
+    "haary"
+  ],
+  "bugs": {
+    "url": "https://github.com/anshuman108-tech/dance_website/issues"
+  },
+  "homepage": "https://github.com/anshuman108-tech/dance_website#readme"
 }
